--- a/sources.yaml
+++ b/sources.yaml
@@ -1,55 +1,66 @@
 sources:
   gnu:
     defaults:
-      url: https://ftp.gnu.org/gnu/{name}/{name}-{version}.tar.xz
+      url: https://ftp.gnu.org/gnu/{name}/{name}-{version}.tar.{ext}
+      ext: xz
     packages:
-      - binutils: '2.38'
-      - mpfr: '4.1.0'
-      - gmp: '6.2.1'
-      - mpc: '1.2.1'
-      - gcc: '11.2.0'
-      - ncurses: '6.3'
-      - bash: '5.1.16'
-      - coreutils: '9.0'
-      - diffutils: '3.8'
-      - findutils: '4.9.0'
-      - gawk: '5.1.1'
-      - gettext: '0.21'
-      - grep: '3.7'
-      - gzip: '1.11'
-      - make: '4.3'
-      - patch: '2.7.6'
-      - sed: '4.8'
-      - tar: '1.34'
-      - texinfo: '6.8'
-      - nano: '6.1'
+      - binutils: 2.38
+      - mpfr: 4.1.0
+      - gmp: 6.2.1
+      - mpc:
+          version: 1.2.1
+          ext: gz
+      - gcc:
+          url: https://ftp.gnu.org/gnu/{name}/{name}-{version}/{name}-{version}.tar.{ext}
+          version: 11.2.0
+      - ncurses:
+          version: 6.3
+          ext: gz
+      - bash:
+          version: 5.1.16
+          ext: gz
+      - coreutils: 9.0
+      - diffutils: 3.8
+      - findutils: 4.9.0
+      - gawk: 5.1.1
+      - gettext: 0.21
+      - grep: 3.7
+      - gzip: 1.11
+      - make:
+          version: 4.3
+          ext: gz
+      - patch: 2.7.6
+      - sed: 4.8
+      - tar: 1.34
+      - texinfo: 6.8
+      - nano: 6.1
   non-gnu:
     packages:
       - linux:
-          version: '5.16.10'
+          version: 5.16.10
           url: https://cdn.kernel.org/pub/linux/kernel/v5.x/linux-{version}.tar.xz
       - musl:
-          version: '1.2.2'
+          version: 1.2.2
           url: https://musl.libc.org/releases/musl-{version}.tar.gz
       - isl:
-          version: '0.24'
+          version: 0.24
           url: https://gcc.gnu.org/pub/gcc/infrastructure/isl-{version}.tar.bz2
       - zlib:
-          version: '1.2.11'
+          version: 1.2.11
           url: https://zlib.net/zlib-{version}.tar.gz
       - bzip2:
-          version: '1.0.8'
+          version: 1.0.8
           url: https://www.sourceware.org/pub/bzip2/bzip2-{version}.tar.gz
       - check:
-          version: '0.15.2'
+          version: 0.15.2
           url: https://github.com/libcheck/check/releases/download/{version}/check-{version}.tar.gz
       - file:
-          version: '5.41'
+          version: 5.41
           url: http://ftp.astron.com/pub/file/file-{version}.tar.gz
       - util-linux:
-          version: '2.37.4'
-          url: https://mirrors.edge.kernel.org/pub/linux/utils/util-linux/2.37/util-linux-{version}.tar.gz
+          version: 2.37.4
+          url: https://mirrors.edge.kernel.org/pub/linux/utils/util-linux/v2.37/util-linux-{version}.tar.gz
       - xz-utils:
-          version: '5.2.5'
+          version: 5.2.5
           url: https://tukaani.org/xz/xz-{version}.tar.gz
 
