--- a/steps.yaml
+++ b/steps.yaml
@@ -1,42 +1,92 @@
 cross_tools:
   defaults:
-    unpack: |
-      tar xf ${SOURCES}/{name}-{version}.tar.{ext}
-      cd {name}-{version}
-  packages:
-    - file:
-        version: 5.19
-        url: ftp://ftp.astron.com/pub/file/file-{version}.tar.gz
-        build: |
-          ./configure --prefix=/ --disable-static
-          make ${MAKEOPTS}
-          make DESTDIR=${D} install
-    - m4:
-        version: 1.4.19
-        url: https://ftp.gnu.org/gnu/m4/m4-{version}.tar.xz
-        build: |
-          ./configure --prefix=/
-          make ${MAKEOPTS}
-          make DESTDIR=${D} install
-    - ncurses:
-        version: 6.3
-        url: https://ftp.gnu.org/gnu/ncurses/ncurses-{version}.tar.gz
-        build: |
-          ./configure --prefix=/ --without-debug --without-shared
-          make ${MAKEOPTS} -C include
-          make ${MAKEOPTS} -C progs tic
-          install -v -m755 progs/tic ${D}/bin
-    - pkg-config-lite:
-        version: 0.28-1
-        url: http://sourceforge.net/projects/pkgconfiglite/files/{version}/pkg-config-lite-{version}.tar.gz
-        build: |
-          ./configure --prefix=/ --host=${CLFS_TARGET} --with-pc-path=${CLFS_TOOLS}/lib/pkgconfig:${CLFS_TOOLS}/share/pkgconfig
-          make ${MAKEOPTS}
-          make DESTDIR=${CLFS_CROSS_TOOLS} install
-    - binutils:
-        url: http://ftp.gnu.org/gnu/binutils/binutils-{version}.tar.xz
-        version: 2.38
-        build: |
-          AR=ar AS=as ./configure --prefix=${CROSS_LFS_TOOLS} --host=${CLFS_HOST} --target=${CLFS_TARGET} --with-sysroot=${CLFS} --with-lib-path=${CLFS_TOOLS}/lib --disable-lns --disable-static --enable-64-bit-bfd --disable-multilib --disable-werror
-          make ${MAKEOPTS}
-          make DESTDIR=${CLFS_CROSS_TOOLS} install
+    template: cross.tmpl
+  steps:
+    - linux: |
+        make mrproper
+        make ARCH=${CLFS_ARCH} INSTALL_HDR_PATH=${CLFS}/tools headers_install
+    - binutils: |
+        mkdir binutils-build && cd binutils-build
+        AR=ar AS=as ../binutils-${BINUTILS_VERSION}/configure \
+          --prefix=${CLFS}/cross-tools \
+          --host=${CLFS_HOST} \
+          --target=${CLFS_TARGET} \
+          --with-sysroot=${CLFS} \
+          --with-lib-path=${CLFS}/tools/lib \
+          --disable-nls \
+          --disable-static \
+          --enable-64-bit-bfd \
+          --disable-multilib \
+          --disable-werror
+        make
+        make install
+    - gcc,mpfr,gmp,mpc: |
+        mv mpfr-${MPFR_VERSION} gmp-${GMP_VERSION} mpc-${MPC_VERSION} gcc-${GCC_VERSION}
+        mkdir gcc-build && cd gcc-build
+        AR=ar LDFLAGS="-Wl,-rpath,${CLFS}/cross-tools/lib" \
+          ../gcc-"${GCC_VERSION}"/configure \
+          --prefix=${CLFS}/cross-tools \
+          --build=${CLFS_HOST} \
+          --host=${CLFS_HOST} \
+          --target=${CLFS_TARGET} \
+          --with-sysroot=${CLFS} \
+          --with-local-prefix=${CLFS}/tools \
+          --with-native-system-header-dir=/tools/include \
+          --disable-shared \
+          --without-headers \
+          --with-newlib \
+          --disable-decimal-float \
+          --disable-libgomp \
+          --disable-libssp \
+          --disable-libatomic \
+          --disable-libitm \
+          --disable-libsanitizer \
+          --disable-libquadmath \
+          --disable-libvtv \
+          --disable-libcilkrts \
+          --disable-libstdc++-v3 \
+          --disable-threads \
+          --disable-multilib \
+          --enable-languages=c \
+          --with-mpfr-include=$(pwd)/../gcc-"${GCC_VERSION}"/mpfr/src \
+          --with-mpfr-lib=$(pwd)/mpfr/src/.libs
+        make all-gcc all-target-libgcc
+        make install-gcc install-target-libgcc
+    - musl: |
+        CC="${CLFS_TARGET}-gcc ${CLFS_CFLAGS}" \
+          ./configure \
+          CROSS_COMPILE=${CLFS_TARGET}- \
+          --prefix=/ \
+          --target=${CLFS_TARGET}
+        make
+        DESTDIR=${CLFS}/tools make install
+        unlink ld-musl-aarch64.so.1
+        ln -sf libc.so ld-musl-aarch64.so.1
+        ls -la ld-musl-aarch64.so.1
+        find -type f \
+          -iname 'crt*.o' \
+          -exec ln -sf ../../../tools/lib/{} "${CLFS}"/cross-tools/"${CLFS_TARGET}"/lib/{} \;
+    - gcc,mpfr,gmp,mpc: |
+        mv mpfr-${MPFR_VERSION} gmp-${GMP_VERSION} mpc-${MPC_VERSION} gcc-${GCC_VERSION}
+        mkdir gcc-build && cd gcc-build
+        AR=ar LDFLAGS="-Wl,-rpath,${CLFS}/cross-tools/lib" \
+          ../gcc-"${GCC_VERSION}"/configure \
+          --prefix=${CLFS}/cross-tools \
+          --build=${CLFS_HOST} \
+          --target=${CLFS_TARGET} \
+          --host=${CLFS_HOST} \
+          --with-sysroot=${CLFS} \
+          --with-local-prefix=${CLFS}/tools \
+          --with-native-system-header-dir=/tools/include \
+          --with-lib-path=${CLFS}/tools/lib \
+          --disable-nls \
+          --disable-static \
+          --enable-languages=c,c++ \
+          --disable-multilib \
+          --disable-libsanitizer \
+          --with-mpfr-include=$(pwd)/../gcc-"${GCC_VERSION}"/mpfr/src \
+          --with-mpfr-lib=$(pwd)/mpfr/src/.libs
+        make AS_FOR_TARGET="${CLFS_TARGET}-as" \
+          LD_FOR_TARGET="${CLFS_TARGET}-ld"
+        make install
+
