--- a/steps.yaml
+++ b/steps.yaml
@@ -7,7 +7,7 @@ cross_tools:
         make ARCH=${CLFS_ARCH} INSTALL_HDR_PATH=${CLFS}/tools headers_install
     - binutils: |
         mkdir binutils-build && cd binutils-build
-        AR=ar AS=as ../binutils-${BINUTILS_VERSION}/configure \
+        AR=ar AS=as ../configure \
           --prefix=${CLFS}/cross-tools \
           --host=${CLFS_HOST} \
           --target=${CLFS_TARGET} \
@@ -21,10 +21,10 @@ cross_tools:
         make
         make install
     - gcc,mpfr,gmp,mpc: |
-        mv mpfr-${MPFR_VERSION} gmp-${GMP_VERSION} mpc-${MPC_VERSION} gcc-${GCC_VERSION}
+        mv $CLFS/build/mpfr-${MPFR_VERSION} $CLFS/build/gmp-${GMP_VERSION} $CLFS/build/mpc-${MPC_VERSION} $CLFS/build/gcc-${GCC_VERSION}
         mkdir gcc-build && cd gcc-build
         AR=ar LDFLAGS="-Wl,-rpath,${CLFS}/cross-tools/lib" \
-          ../gcc-"${GCC_VERSION}"/configure \
+          ../configure \
           --prefix=${CLFS}/cross-tools \
           --build=${CLFS_HOST} \
           --host=${CLFS_HOST} \
@@ -48,7 +48,7 @@ cross_tools:
           --disable-threads \
           --disable-multilib \
           --enable-languages=c \
-          --with-mpfr-include=$(pwd)/../gcc-"${GCC_VERSION}"/mpfr/src \
+          --with-mpfr-include=$(pwd)/../mpfr/src \
           --with-mpfr-lib=$(pwd)/mpfr/src/.libs
         make all-gcc all-target-libgcc
         make install-gcc install-target-libgcc
@@ -60,6 +60,7 @@ cross_tools:
           --target=${CLFS_TARGET}
         make
         DESTDIR=${CLFS}/tools make install
+        cd "${CLFS}"/tools/lib
         unlink ld-musl-aarch64.so.1
         ln -sf libc.so ld-musl-aarch64.so.1
         ls -la ld-musl-aarch64.so.1
@@ -67,10 +68,10 @@ cross_tools:
           -iname 'crt*.o' \
           -exec ln -sf ../../../tools/lib/{} "${CLFS}"/cross-tools/"${CLFS_TARGET}"/lib/{} \;
     - gcc,mpfr,gmp,mpc: |
-        mv mpfr-${MPFR_VERSION} gmp-${GMP_VERSION} mpc-${MPC_VERSION} gcc-${GCC_VERSION}
+        mv $CLFS/build/mpfr-${MPFR_VERSION} $CLFS/build/gmp-${GMP_VERSION} $CLFS/build/mpc-${MPC_VERSION} $CLFS/build/gcc-${GCC_VERSION}
         mkdir gcc-build && cd gcc-build
         AR=ar LDFLAGS="-Wl,-rpath,${CLFS}/cross-tools/lib" \
-          ../gcc-"${GCC_VERSION}"/configure \
+          ../configure \
           --prefix=${CLFS}/cross-tools \
           --build=${CLFS_HOST} \
           --target=${CLFS_TARGET} \
@@ -84,7 +85,7 @@ cross_tools:
           --enable-languages=c,c++ \
           --disable-multilib \
           --disable-libsanitizer \
-          --with-mpfr-include=$(pwd)/../gcc-"${GCC_VERSION}"/mpfr/src \
+          --with-mpfr-include=$(pwd)/../mpfr/src \
           --with-mpfr-lib=$(pwd)/mpfr/src/.libs
         make AS_FOR_TARGET="${CLFS_TARGET}-as" \
           LD_FOR_TARGET="${CLFS_TARGET}-ld"
