--- a/sources.yaml
+++ b/sources.yaml
@@ -63,4 +63,5 @@ sources:
       - xz-utils:
           version: 5.2.5
           url: https://tukaani.org/xz/xz-{version}.tar.gz
+          srcdir: xz-{version}
 
