--- a/steps.yaml
+++ b/steps.yaml
@@ -168,3 +168,220 @@ tools:
         make AS_FOR_TARGET="${AS}" \
         LD_FOR_TARGET="${LD}"
         make install
+    - ncurses: |
+        sed -i -e "s/INSTALL_OPT_S=\\\"-s/& --strip-program=${STRIP}/" configure
+        mkdir ncurses-build && cd ncurses-build
+        ../configure \
+        --prefix=${CLFS}/tools \
+        --with-shared \
+        --build=${CLFS_HOST} \
+        --host=${CLFS_TARGET} \
+        --without-debug \
+        --without-ada \
+        --enable-overwrite \
+        --with-build-cc=gcc \
+        --enable-overwrite \
+        --with-default-terminfo-dir=${CLFS}/tools/share/terminfo \
+        --with-termlib
+        make
+        make install
+        cd .. && mkdir ncursesw-build && cd ncursesw-build
+        ../configure \
+        --prefix=${CLFS}/tools \
+        --with-shared \
+        --build=${CLFS_HOST} \
+        --host=${CLFS_TARGET} \
+        --without-debug \
+        --without-ada \
+        --enable-overwrite \
+        --with-build-cc=gcc \
+        --enable-widec \
+        --includedir=${CLFS}/tools/include/ncursesw \
+        --with-default-terminfo-dir=${CLFS}/tools/share/terminfo \
+        --with-termlib
+        make
+        make install
+    - bash: |
+        cat > config.cache << "EOF"
+        ac_cv_func_mmap_fixed_mapped=yes
+        ac_cv_func_strcoll_works=yes
+        ac_cv_func_working_mktime=yes
+        bash_cv_func_sigsetjmp=present
+        bash_cv_getcwd_malloc=yes
+        bash_cv_job_control_missing=present
+        bash_cv_printf_a_format=yes
+        bash_cv_sys_named_pipes=present
+        bash_cv_ulimit_maxfds=yes
+        bash_cv_under_sys_siglist=yes
+        bash_cv_unusable_rtsigs=no
+        gt_cv_int_divbyzero_sigfpe=yes
+        EOF
+        ./configure \
+        --prefix=${CLFS}/tools \
+        --build=${CLFS_HOST} \
+        --host=${CLFS_TARGET} \
+        --without-bash-malloc \
+        --cache-file=config.cache
+        make
+        make install
+    - bzip2: |
+        sed -i \
+          -e '/^all/s/ test$//' \
+          -e 's|CFLAGS=|&-fPIC |' \
+        Makefile
+        make CC="${CC}" AR="${AR}" RANLIB="${RANLIB}"
+        make PREFIX=${CLFS}/tools install
+    - check: |
+        ./configure \
+        --prefix=${CLFS}/tools \
+        --build=${CLFS_HOST} \
+        --host=${CLFS_TARGET} \
+        --disable-subunit
+        make
+        make install
+    - coreutils: |
+        ./configure \
+        --prefix=${CLFS}/tools \
+        --build=${CLFS_HOST} \
+        --host=${CLFS_TARGET} \
+        --enable-install-program=hostname \
+        --cache-file=config.cache
+        sed -i -e 's/^man1_MANS/#man1_MANS/' Makefile
+        make
+        make install
+    - diffutils: |
+        ./configure \
+        --prefix=${CLFS}/tools \
+        --build=${CLFS_HOST} \
+        --host=${CLFS_TARGET}
+        make
+        make install
+    - file: |
+        ./configure \
+        --prefix=${CLFS}/tools \
+        --build=${CLFS_HOST} \
+        --host=${CLFS_TARGET} \
+        --with-pic=yes
+        make
+        make install
+    - findutils: |
+        echo "gl_cv_func_wcwidth_works=yes" > config.cache
+        echo "ac_cv_func_fnmatch_gnu=yes" >> config.cache
+        ./configure \
+        --prefix=${CLFS}/tools \
+        --build=${CLFS_HOST} \
+        --host=${CLFS_TARGET} \
+        --cache-file=config.cache
+        make
+        make install
+    - gawk: |
+        ./configure \
+        --prefix=${CLFS}/tools \
+        --build=${CLFS_HOST} \
+        --host=${CLFS_TARGET}
+        make
+        make install
+    - gettext: |
+        EMACS="no" \
+        ./configure \
+        --prefix=${CLFS}/tools \
+        --build=${CLFS_HOST} \
+        --host=${CLFS_TARGET} \
+        --disable-shared
+        make
+        make install
+    - grep: |
+        ./configure \
+        --prefix=${CLFS}/tools \
+        --build=${CLFS_HOST} \
+        --host=${CLFS_TARGET}
+        make
+        make install
+    - gzip: |
+        ./configure \
+        --prefix=${CLFS}/tools \
+        --build=${CLFS_HOST} \
+        --host=${CLFS_TARGET}
+        make
+        make install
+    - make: |
+        ./configure \
+        --prefix=${CLFS}/tools \
+        --build=${CLFS_HOST} \
+        --host=${CLFS_TARGET} \
+        --without-guile
+        make
+        make install
+    - patch: |
+        ./configure \
+        --prefix=${CLFS}/tools \
+        --build=${CLFS_HOST} \
+        --host=${CLFS_TARGET}
+        make
+        make install
+    - sed: |
+        ./configure \
+        --prefix=${CLFS}/tools \
+        --build=${CLFS_HOST} \
+        --host=${CLFS_TARGET}
+        make
+        make install
+    - tar: |
+        cat > config.cache << EOF
+        gl_cv_func_wcwidth_works=yes
+        gl_cv_func_btowc_eof=yes
+        ac_cv_func_malloc_0_nonnull=yes
+        gl_cv_func_mbrtowc_incomplete_state=yes
+        gl_cv_func_mbrtowc_nul_retval=yes
+        gl_cv_func_mbrtowc_null_arg1=yes
+        gl_cv_func_mbrtowc_null_arg2=yes
+        gl_cv_func_mbrtowc_retval=yes
+        gl_cv_func_wcrtomb_retval=yes
+        EOF 
+        ./configure \
+        --prefix=${CLFS}/tools \
+        --build=${CLFS_HOST} \
+        --host=${CLFS_TARGET} \
+        --cache-file=config.cache
+        make
+        make install
+    - texinfo: |
+        PERL=/usr/bin/perl \
+        ./configure \
+        --prefix=${CLFS}/tools \
+        --build=${CLFS_HOST} \
+        --host=${CLFS_TARGET}
+        make
+        make install
+    - util-linux: |
+        NCURSESW6_CONFIG=" " \
+        NCURSES6_CONFIG=" " \
+        NCURSESW5_CONFIG=" " \
+        NCURSES5_CONFIG=" " \
+        LDFLAGS="-ltinfow" \
+        ./configure \
+        --prefix=${CLFS}/tools \
+        --build=${CLFS_HOST} \
+        --host=${CLFS_TARGET} \
+        --disable-bash-completion \
+        --disable-makeinstall-chown \
+        --disable-makeinstall-setuid \
+        --disable-nologin \
+        --without-python
+        make
+        make install
+    - nano: |
+        LDFLAGS="-ltinfow" \
+        ./configure \
+        --prefix=${CLFS}/tools \
+        --build=${CLFS_HOST} \
+        --host=${CLFS_TARGET}
+        make
+        make install
+    - xz-utils: |
+        ./configure \
+        --prefix=${CLFS}/tools \
+        --build=${CLFS_HOST} \
+        --host=${CLFS_TARGET}
+        make
+        make install
