--- a/steps.yaml
+++ b/steps.yaml
@@ -21,7 +21,9 @@ cross_tools:
         make
         make install
     - gcc,mpfr,gmp,mpc: |
-        mv $CLFS/build/mpfr-${MPFR_VERSION} $CLFS/build/gmp-${GMP_VERSION} $CLFS/build/mpc-${MPC_VERSION} $CLFS/build/gcc-${GCC_VERSION}
+        mv $CLFS/build/mpfr-${MPFR_VERSION} $CLFS/build/gcc-${GCC_VERSION}/mpfr
+        mv $CLFS/build/gmp-${GMP_VERSION} $CLFS/build/gcc-${GCC_VERSION}/gmp
+        mv $CLFS/build/mpc-${MPC_VERSION} $CLFS/build/gcc-${GCC_VERSION}/mpc
         mkdir gcc-build && cd gcc-build
         AR=ar LDFLAGS="-Wl,-rpath,${CLFS}/cross-tools/lib" \
           ../configure \
@@ -68,7 +70,9 @@ cross_tools:
           -iname 'crt*.o' \
           -exec ln -sf ../../../tools/lib/{} "${CLFS}"/cross-tools/"${CLFS_TARGET}"/lib/{} \;
     - gcc,mpfr,gmp,mpc: |
-        mv $CLFS/build/mpfr-${MPFR_VERSION} $CLFS/build/gmp-${GMP_VERSION} $CLFS/build/mpc-${MPC_VERSION} $CLFS/build/gcc-${GCC_VERSION}
+        mv $CLFS/build/mpfr-${MPFR_VERSION} $CLFS/build/gcc-${GCC_VERSION}/mpfr
+        mv $CLFS/build/gmp-${GMP_VERSION} $CLFS/build/gcc-${GCC_VERSION}/gmp
+        mv $CLFS/build/mpc-${MPC_VERSION} $CLFS/build/gcc-${GCC_VERSION}/mpc
         mkdir gcc-build && cd gcc-build
         AR=ar LDFLAGS="-Wl,-rpath,${CLFS}/cross-tools/lib" \
           ../configure \
@@ -85,6 +89,7 @@ cross_tools:
           --enable-languages=c,c++ \
           --disable-multilib \
           --disable-libsanitizer \
+          --with-
           --with-mpfr-include=$(pwd)/../mpfr/src \
           --with-mpfr-lib=$(pwd)/mpfr/src/.libs
         make AS_FOR_TARGET="${CLFS_TARGET}-as" \
