--- a/steps.yaml
+++ b/steps.yaml
@@ -148,6 +148,7 @@ tools:
         make
         make install
     - zlib: |
+        CROSS_PREFIX=${CLFS_TARGET}- \
         ./configure \
         --prefix=${CLFS}/tools
         make
