Try CHOST for zlib, which is the right way to do it. Hopefully this will allow the shared lib to build in the ubuntu CI.

--- a/steps.yaml
+++ b/steps.yaml
@@ -148,7 +148,7 @@ tools:
         make
         make install
     - zlib: |
-        CROSS_PREFIX=${CLFS_TARGET}- \
+        CHOST=${CLFS_TARGET} \
         ./configure \
         --prefix=${CLFS}/tools
         make
