Try doing what zlib is telling us to do.

--- a/steps.yaml
+++ b/steps.yaml
@@ -148,6 +148,7 @@ tools:
         make
         make install
     - zlib: |
+        unset CFLAGS
         CHOST=${CLFS_TARGET} \
         ./configure \
         --prefix=${CLFS}/tools
