If you try to cross-compile "file", but you don't have a suitable version of "file" installed locally, you get this error:
Cannot use the installed version of file (5.39) to
cross-compile file 5.41
Please install file 5.41 locally first

Rather than add "file" as a local requirement, let's try to build it into cross-tools first.

--- a/steps.yaml
+++ b/steps.yaml
@@ -112,7 +112,11 @@ cross_tools:
         make AS_FOR_TARGET="${CLFS_TARGET}-as" \
           LD_FOR_TARGET="${CLFS_TARGET}-ld"
         make install
-
+    - file: |
+        ./configure \
+        --prefix=${CLFS}/cross-tools
+        make
+        make install
 tools:
   defaults:
     template: tools.tmpl
