Add support for patching and a glibc-2.34 patch for texinfo. This all needs testing.

--- a/sources.yaml
+++ b/sources.yaml
@@ -32,7 +32,10 @@ sources:
       - patch: 2.7.6
       - sed: 4.8
       - tar: 1.34
-      - texinfo: 6.8
+      - texinfo:
+          version: 6.8
+          patches:
+            - texinfo-6.8-glibc-2.34-compat.patch
       - nano: 6.1
   non-gnu:
     packages:
