--- a/ci/mottainai-funtoo.yaml
+++ b/ci/mottainai-funtoo.yaml
@@ -1,8 +1,12 @@
 name: "ffs/funtoo"
 script:
+# Needed until the image will be migrated to dhclient template.
+- sleep 5
 - >-
-  ego sync && emerge --jobs pyyaml jinja
-- export CLFS=${HOME}/ffs
+  ego sync &&
+  emerge --jobs pyyaml jinja
+- export CLFS=${HOME}
+- install -d ${CLFS}/sources
 - bin/sourcer fetch
 - bin/builder cross_tools
 - bin/builder tools
