--- a/ci/Makefile
+++ b/ci/Makefile
@@ -4,7 +4,12 @@
 all:
 	@echo "gen-test-task                   Generate and fire the task for testing ffs on"
 	@echo "                                selected image."
+	@echo "gen-test-pipeline               Generate and fire the pipeline for testing ffs"
 
 .PHONY: gen-test-task
 gen-test-task:
 	@make/test-tasks
+
+.PHONY: gen-test-pipeline
+gen-test-pipeline:
+	@make/start-pipeline
