Add new 'arch' first argument to builder, which uses the arch you specify, which sources yaml from arch/x86-64bit.yaml, for example:
bin/builder x86-64bit cross_tools
bin/builder x86-64bit tools

--- a/ci/mottainai-funtoo-x86-64bit.yaml
+++ b/ci/mottainai-funtoo-x86-64bit.yaml
@@ -4,8 +4,8 @@ script:
   ego sync && emerge --jobs pyyaml jinja
 - export CLFS=${HOME}/ffs
 - bin/sourcer fetch
-- bin/builder cross_tools
-- bin/builder tools
+- bin/builder x86-64bit cross_tools
+- bin/builder x86-64bit tools
 environment:
 - SHELL=/bin/bash
 - LUET_NOLOCK=true
