--- a/ci/mottainai-ubuntu-21.10-x86-64bit.yaml
+++ b/ci/mottainai-ubuntu-21.10-x86-64bit.yaml
@@ -4,7 +4,7 @@ script:
   apt-get update && apt-get -y install python3-yaml python3-jinja2 wget xz-utils make gcc g++ rsync texinfo file m4 bzip2 patch
 - export CLFS=${HOME}
 - install -d ${CLFS}/sources
-- bin/sourcer fetch && bin/builder cross_tools && bin/builder tools
+- bin/sourcer fetch && bin/builder x86-64bit cross_tools && bin/builder x86-64bit tools
 environment:
 - SHELL=/bin/bash
 - LUET_NOLOCK=true
