--- a/steps.yaml
+++ b/steps.yaml
@@ -46,6 +46,10 @@ cross_tools:
         mkdir gcc-build && cd gcc-build
         AR=ar LDFLAGS="-Wl,-rpath,${CLFS}/cross-tools/lib" \
           ../configure \
+          {%- if arch == "powerpc" %}
+          --with-abi=elfv2 \
+          --with-libf7=no \
+          {%- endif %}
           --prefix=${CLFS}/cross-tools \
           --build=${CLFS_HOST} \
           --host=${CLFS_HOST} \
@@ -83,9 +87,9 @@ cross_tools:
         make
         DESTDIR=${CLFS}/tools make install
         cd "${CLFS}"/tools/lib
-        unlink ld-musl-{{arch}}.so.1
-        ln -sf libc.so ld-musl-{{arch}}.so.1
-        ls -la ld-musl-{{arch}}.so.1
+        unlink ld-musl-{{musl_lib_arch}}.so.1
+        ln -sf libc.so ld-musl-{{musl_lib_arch}}.so.1
+        ls -la ld-musl-{{musl_lib_arch}}.so.1
         find -type f \
           -iname 'crt*.o' \
           -exec ln -sf ../../../tools/lib/{} "${CLFS}"/cross-tools/"${CLFS_TARGET}"/lib/{} \;
@@ -93,6 +97,10 @@ cross_tools:
         mkdir gcc-build && cd gcc-build
         AR=ar LDFLAGS="-Wl,-rpath,${CLFS}/cross-tools/lib" \
           ../configure \
+          {%- if arch == "powerpc" %}
+          --with-abi=elfv2 \
+          --with-libf7=no \
+          {%- endif %}
           --prefix=${CLFS}/cross-tools \
           --build=${CLFS_HOST} \
           --target=${CLFS_TARGET} \
@@ -180,6 +188,10 @@ tools:
         sed -i 's|^RAW_CXX_FOR_TARGET="$CXX_FOR_TARGET|& -nostdinc++|' configure
         mkdir gcc-build && cd gcc-build
         ../configure \
+        {%- if arch == "powerpc" %}
+        --with-abi=elfv2 \
+        --with-libf7=no \
+        {%- endif %}
         --prefix=${CLFS}/tools \
         --build=${CLFS_HOST} \
         --host=${CLFS_TARGET} \
