Try to fix a non-zero exit code.

--- a/steps.yaml
+++ b/steps.yaml
@@ -442,3 +442,5 @@ tools:
         if [ ! -L "$CLFS/lib/ld-musl-{{musl_lib_arch}}.so.1" ]; then
           ln -sf ../tools/lib/ld-musl-{{musl_lib_arch}}.so.1 "$CLFS/lib/ld-musl-{{musl_lib_arch}}.so.1"
         fi
+        # avoid a non-zero exit code:
+        exit 0
