Adding a missing /tmp within the fchroot which is necessary for configure scripts to do their thing.

--- a/steps.yaml
+++ b/steps.yaml
@@ -14,7 +14,9 @@ cross_tools:
         ln -sf lib "${CLFS}/tools/lib64"
         # make sure it's a symlink
         test -L "${CLFS}/tools/lib64"
+        # Create critical directories:
         install -d ${CLFS}/{dev,proc,run,sys,etc,lib}
+        install -m 1777 -d ${CLFS}/tmp
     - linux: |
         make mrproper
         make ARCH={{arch}} INSTALL_HDR_PATH=${CLFS}/tools headers_install
